--- a/mineblock.desktop
+++ b/mineblock.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Name=MineBlock
 Comment=Fun with Minecraft together with learning to program
-Exec=python /home/pi/mineblock/mineblock.py
-Icon=/home/pi/mineblock/ncblock/static/images/icons/mineblock.png
+Exec=python [your absolute path of mineblock directyr]/mineblock.py
+Icon= [your absolute path of mineblock directyr]/static/images/icons/mineblock.png
 Terminal=false
 Type=Application
 Categories=Application;Game;
