--- a/mineblock.desktop
+++ b/mineblock.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Name=MineBlock
 Comment=Fun with Minecraft together with learning to program
-Exec=python [your absolute path of mineblock directyr]/mineblock.py
-Icon= [your absolute path of mineblock directyr]/static/images/icons/mineblock.png
+Exec=python [your absolute path of mineblock directory]/mineblock.py
+Icon= [your absolute path of mineblock directory]/static/images/icons/mineblock.png
 Terminal=false
 Type=Application
 Categories=Application;Game;
